2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/cd-drive.c: (linux_bsd_media_type), (add_whitelist),
	(get_device_max_speed), (add_linux_cd_recorder),
	(add_linux_cd_drive), (linux_scan):
	* src/cd-drive.h:
	* src/dvd_plus_rw_utils.cpp:
	updated from libbacon.

	* src/egg-recent-item.c: (egg_recent_item_ref),
	(egg_recent_item_unref):
	* src/egg-recent-item.h:
	updated from libegg.


2003-09-26  Bastien Nocera  <hadess@hadess.net>

	* data/playlist.glade:
	* data/totem.glade:
	* data/totem.schemas.in:
	* src/totem-playlist.c: (totem_playlist_save_current_playlist),
	(totem_playlist_remove_files), (shuffle_button_toggled),
	(update_shuffle_cb), (init_config), (totem_playlist_init),
	(totem_playlist_add_one_mrl), (parse_asx_entry),
	(totem_playlist_set_previous), (totem_playlist_get_shuffle),
	(totem_playlist_set_shuffle), (totem_playlist_set_at_end),
	(totem_playlist_class_init):
	* src/totem-playlist.h:
	* src/totem.c: (on_shuffle_mode1_toggled),
	(playlist_shuffle_toggle_cb), (totem_callback_connect):
	starts of a shuffle playlist, fix parsing of ASX playlists (fixes
	playback of sr.se)

2003-09-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_save_size), (totem_action_exit),
	(totem_action_fullscreen_toggle): fix saving the size of the widget
	before going to fullscreen, or on exit if we're not in fullscreen
	(Closes: #123109)

2003-09-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_files): close and stop the stream
	before trying to open the CD tracks, fixes run-time warning, and
	delay getting the CD track titles

2003-09-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_add_recent),
	(totem_add_cd_track_name), (totem_action_open_files):
	fix memleaks when using "dvd:" or "cd:" on the command-line,
	get the title of all the tracks when reading an Audio CD
	(Closes: #122821)

2003-09-22  Bastien Nocera  <hadess@hadess.net>
