@@ -1,3 +1,13 @@
+2003-09-27  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-playlist.c: (totem_playlist_save_current_playlist),
+	(update_current_from_playlist), (totem_playlist_remove_files),
+	(compare_random), (ensure_shuffled), (shuffle_button_toggled),
+	(totem_playlist_add_one_mrl), (totem_playlist_add_mrl),
+	(totem_playlist_has_previous_mrl), (totem_playlist_has_next_mrl),
+	(totem_playlist_set_previous), (totem_playlist_set_next),
+	(totem_playlist_set_at_end): hopefully, make shuffle work
+
 2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* src/cd-drive.c: (linux_bsd_media_type), (add_whitelist),
